[gd_scene load_steps=6 format=3 uid="uid://dqc8vaitliuep"]

[ext_resource type="Script" uid="uid://drajhdo55m2k6" path="res://Scripts/Attacks/twin_attack.gd" id="1_ihjqb"]
[ext_resource type="PackedScene" uid="uid://dxtlhaoalm7os" path="res://Scenes/Entities/Projectiles/Source/bullet_source.tscn" id="3_yb0mj"]
[ext_resource type="PackedScene" uid="uid://b3ifmidv1nnnd" path="res://Scenes/Entities/Projectiles/projectile.tscn" id="4_cq3fe"]

[sub_resource type="Curve" id="Curve_yb0mj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_3aetu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1220, 0, 0, 0, 0, 0, 1220, 0)
}
point_count = 2

[node name="TwinAttack" type="Node2D"]
script = ExtResource("1_ihjqb")
speed_curve = SubResource("Curve_yb0mj")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(0, -1)
curve = SubResource("Curve2D_3aetu")

[node name="MovingBulletPattern" type="PathFollow2D" parent="Path2D"]
position = Vector2(1220, 0)
progress = 2440.0
rotates = false

[node name="BulletSource" parent="Path2D/MovingBulletPattern" instance=ExtResource("3_yb0mj")]
rotation = 1.5708
projectile = ExtResource("4_cq3fe")
group = "TwinAttack"

[node name="MovingBulletPattern2" type="PathFollow2D" parent="Path2D"]
position = Vector2(-1220, 0)
rotates = false

[node name="BulletSource" parent="Path2D/MovingBulletPattern2" instance=ExtResource("3_yb0mj")]
rotation = 1.5708
projectile = ExtResource("4_cq3fe")
group = "TwinAttack"

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
